[gd_scene load_steps=59 format=3 uid="uid://05gfao8v07up"]

[ext_resource type="Script" path="res://Scripts/combat.gd" id="1_3ic73"]
[ext_resource type="Texture2D" uid="uid://d2xeawdo87ws3" path="res://Assets/Player/Player_Idle_game_48x48.png" id="1_4lxwe"]
[ext_resource type="Texture2D" uid="uid://cgo4d2p7d2c6l" path="res://Assets/Player/Player Death game 64x64.png" id="1_lylv1"]
[ext_resource type="Script" path="res://Scripts/Player_States.gd" id="2_paqux"]
[ext_resource type="PackedScene" uid="uid://c4nvwjvlgbj5v" path="res://Scenes/enemy.tscn" id="3_sp0yw"]
[ext_resource type="Texture2D" uid="uid://7hnj0lrasmoe" path="res://Assets/Player/Player Punch game 64x64.png" id="3_tl8ij"]
[ext_resource type="Texture2D" uid="uid://cm5gjks44c01a" path="res://Assets/Player/Player shark Idle game 48x48.png" id="6_k7n8u"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="6_nwsc2"]
[ext_resource type="Script" path="res://Scripts/Text_Stats Panel.gd" id="8_dvme0"]
[ext_resource type="AudioStream" uid="uid://cpcyxtx311yio" path="res://Assets/SFX/Death.wav" id="9_hp43e"]
[ext_resource type="AudioStream" uid="uid://twuhcxbhsuq1" path="res://Assets/SFX/Slash.wav" id="10_2gsuv"]
[ext_resource type="PackedScene" uid="uid://dcei1hx5bl47l" path="res://Scenes/attack_action_button.tscn" id="11_6g8pf"]
[ext_resource type="PackedScene" uid="uid://n17ulwesstpi" path="res://Scenes/item_button.tscn" id="12_5r8gu"]
[ext_resource type="Texture2D" uid="uid://b0x8x5c5pcq77" path="res://Assets/Backgrounds/Neighbourhood.png" id="13_feoon"]
[ext_resource type="PackedScene" uid="uid://b2mesxsycigdy" path="res://Scenes/companion_button.tscn" id="13_p6t3d"]
[ext_resource type="PackedScene" uid="uid://be5rafxnnyc48" path="res://Scenes/end_turn_button.tscn" id="14_eqq2w"]
[ext_resource type="PackedScene" uid="uid://bxwlkreltm78x" path="res://Scenes/power_up_button.tscn" id="15_tsrye"]
[ext_resource type="PackedScene" uid="uid://iw00trfft1wk" path="res://Scenes/return_button.tscn" id="16_eewbw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fntxe"]
atlas = ExtResource("1_lylv1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_07exj"]
atlas = ExtResource("1_lylv1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq58u"]
atlas = ExtResource("1_lylv1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmqeu"]
atlas = ExtResource("1_lylv1")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_okbma"]
atlas = ExtResource("1_lylv1")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly4eu"]
atlas = ExtResource("1_lylv1")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgjsc"]
atlas = ExtResource("1_lylv1")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03r"]
atlas = ExtResource("1_lylv1")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u6xs"]
atlas = ExtResource("1_lylv1")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jlon"]
atlas = ExtResource("1_lylv1")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6vq0"]
atlas = ExtResource("1_4lxwe")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d0qm"]
atlas = ExtResource("1_4lxwe")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b7ka"]
atlas = ExtResource("1_4lxwe")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uafu"]
atlas = ExtResource("1_4lxwe")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_slbrw"]
atlas = ExtResource("1_4lxwe")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhk6f"]
atlas = ExtResource("1_4lxwe")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq41q"]
atlas = ExtResource("1_4lxwe")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqn88"]
atlas = ExtResource("1_4lxwe")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_72gg8"]
atlas = ExtResource("1_4lxwe")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p0ro"]
atlas = ExtResource("1_4lxwe")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e1i6"]
atlas = ExtResource("3_tl8ij")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejtrb"]
atlas = ExtResource("3_tl8ij")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuqqe"]
atlas = ExtResource("3_tl8ij")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0d2j"]
atlas = ExtResource("3_tl8ij")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_451cj"]
atlas = ExtResource("3_tl8ij")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2clyt"]
atlas = ExtResource("3_tl8ij")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_non0c"]
atlas = ExtResource("3_tl8ij")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1vej"]
atlas = ExtResource("3_tl8ij")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rghbm"]
atlas = ExtResource("6_k7n8u")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj7is"]
atlas = ExtResource("6_k7n8u")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_splll"]
atlas = ExtResource("6_k7n8u")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndrf3"]
atlas = ExtResource("6_k7n8u")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmwfk"]
atlas = ExtResource("6_k7n8u")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_twr3d"]
atlas = ExtResource("6_k7n8u")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq1u5"]
atlas = ExtResource("6_k7n8u")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfd6p"]
atlas = ExtResource("6_k7n8u")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_udxy1"]
atlas = ExtResource("6_k7n8u")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgwqp"]
atlas = ExtResource("6_k7n8u")
region = Rect2(432, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bb7bs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fntxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07exj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq58u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmqeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okbma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly4eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgjsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u6xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jlon")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6vq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d0qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b7ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uafu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slbrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhk6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq41q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqn88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72gg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p0ro")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e1i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejtrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuqqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0d2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_451cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2clyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_non0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1vej")
}],
"loop": false,
"name": &"Punch",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rghbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj7is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_splll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndrf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmwfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twr3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq1u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfd6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udxy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgwqp")
}],
"loop": true,
"name": &"SharkIdle",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3vnp"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="Combat" type="Node"]
script = ExtResource("1_3ic73")

[node name="Player_States" type="Node" parent="."]
script = ExtResource("2_paqux")

[node name="Player" type="Node2D" parent="."]
position = Vector2(531, 317)

[node name="Player_Animations" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_bb7bs")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.236427

[node name="Enemy" parent="." instance=ExtResource("3_sp0yw")]
position = Vector2(630, 317)
script = ExtResource("6_nwsc2")

[node name="SlashSFX" type="AudioStreamPlayer2D" parent="Enemy"]
position = Vector2(-630, -317)
stream = ExtResource("10_2gsuv")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="Enemy"]
stream = ExtResource("9_hp43e")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackgroundPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 10.725
anchor_top = 8.325
anchor_right = 18.175
anchor_bottom = 10.175
offset_left = 3.0
offset_top = -2.0
offset_right = 2.99994
offset_bottom = -1.99997
theme_override_styles/panel = SubResource("StyleBoxFlat_u3vnp")

[node name="Text_Stats Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.275
anchor_top = 8.325
anchor_right = 18.025
anchor_bottom = 10.175
offset_top = -3.05176e-05
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_dvme0")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Text_Stats Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.162
anchor_right = 0.413
anchor_bottom = 0.757
offset_left = 1.0
offset_top = 0.0120258
offset_right = 0.0500221
offset_bottom = -0.0179939
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HP" type="Label" parent="UI/Text_Stats Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "HP: 25"
horizontal_alignment = 1

[node name="AP" type="Label" parent="UI/Text_Stats Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "AP: 10"
horizontal_alignment = 1

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 455.0
offset_top = 340.0
offset_right = 542.0
offset_bottom = 400.0
columns = 2

[node name="Attack_Action_Button" parent="UI/BattleActionButtons" instance=ExtResource("11_6g8pf")]
layout_mode = 2

[node name="Item_Button" parent="UI/BattleActionButtons" instance=ExtResource("12_5r8gu")]
layout_mode = 2

[node name="Companion_Button" parent="UI/BattleActionButtons" instance=ExtResource("13_p6t3d")]
layout_mode = 2

[node name="End_Turn_Button" parent="UI/BattleActionButtons" instance=ExtResource("14_eqq2w")]
layout_mode = 2

[node name="Power_Up_Button" parent="UI/BattleActionButtons" instance=ExtResource("15_tsrye")]
visible = false
layout_mode = 2

[node name="Return_Button" parent="UI/BattleActionButtons" instance=ExtResource("16_eewbw")]
visible = false
layout_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(4, 4)

[node name="Neighbourhood" type="Sprite2D" parent="."]
visibility_layer = 161
z_index = -1
position = Vector2(583, 255)
scale = Vector2(0.951823, 1)
texture = ExtResource("13_feoon")

[node name="Message" type="Label" parent="."]
offset_left = 449.0
offset_top = 384.0
offset_right = 556.0
offset_bottom = 400.0
text = "Messages Down Here"

[connection signal="ap_changed" from="Player_States" to="UI/Text_Stats Panel" method="_on_player_states_ap_changed"]
[connection signal="hp_changed" from="Player_States" to="UI/Text_Stats Panel" method="_on_player_states_hp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_enemy_died"]
